--- a/styles.css
+++ b/styles.css
@@ -4768,25 +4768,25 @@ body.dark #TSresearchmodediv {
 }
 
 .TScol1 {
-  flex-basis:20%;
+  flex-basis:22%;
   border-right: 1px solid #ccc;
   padding: 0 4px 0 0;
 }
 
 .TScol2 {
-  flex-basis:30%;
+  flex-basis:25%;
   border-right: 1px solid #ccc;
   padding: 0 4px;
 }
 
 .TScol3 {
-  flex-basis:30%;
+  flex-basis:35%;
   border-right: 1px solid #ccc;
   padding: 0 4px;
 }
 
 .TScontrols {
-  flex-basis:20%;
+  flex-basis:18%;
   display: flex;
   padding: 0 0 0 4px;
 }
@@ -4815,6 +4815,10 @@ body.dark #TSresearchmodediv {
 
 body.dark #TStablecontrols {
   background: linear-gradient(180deg, transparent, #324036);
+}
+
+body.dark .TSrow, body.dark .TScol1, body.dark .TScol2, body.dark .TScol3 {
+  border-color: #5f5f5f;
 }
 
 #TSplaceholder {
